# libpvictor

./: CMakeLists.txt  LICENSE  README.md  compile.sh
include/: libpvictor.h
src/: imu_main.cpp  lcd_main.cpp  pcm_main.cpp  spine_main.cpp
src/libs/: gpio.c  lcd.c  spine.cpp  spine.h
utils/voff/: voff.cpp
